gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-unsized_locals.rs
fn f(f: dyn FnOnce()) {}
// { dg-error ".E0277." "" { target *-*-* } .-1 }

fn main() {
}

